<resources>
    <string name="app_name">NusaL</string>
    <string name="category_image">Category Image</string>
    <string name="selamat_datang_kembali">Selamat datang kembali!</string>
    <string name="apa_yang_hari_ini_kamu_ingin_lakukan">Apa yang hari ini kamu ingin lakukan?</string>
    <string name="keluar">Keluar</string>
    <string name="background_logo_aplikasi">Background logo Aplikasi</string>
    <string name="mari_latih_menulis_aksara_mu">Mari latih menulis aksara-mu!</string>
    <string name="belajar_menulis_aksara">Belajar Menulis Aksara</string>
    <string name="icon_warning">icon warning</string>
    <string name="logout_alert_txt">Apakah Anda ingin melakukan Logout ?</string>
    <string name="tidak">Tidak</string>
    <string name="iya">Iya</string>
    <string name="content_desc_aksara_image">Aksara Image</string>
    <string name="hapus_kanvas">Hapus Kanvas</string>
    <string name="cek_aksara">Cek Aksara</string>
    <string name="pilih_bahasa_aksara">Pilih Bahasa Aksara</string>
    <string name="lean_detail_header">Pilih salah satu aksara dan mulai belajar!</string>
    <string name="masuk">Masuk</string>
    <string name="silahkan_masuk">Silahkan masuk untuk lanjut</string>
    <string name="masukkan_email">Masukkan email Anda...</string>
    <string name="masukkan_kata_sandi">Masukkan kata sandi Anda...</string>
    <string name="belum_punya_akun">Belum punya akun? Daftar sekarang!</string>
    <string name="daftar">Daftar</string>
    <string name="nusal_logo">NusaL Logo</string>
    <string name="content_desc_logout_button">Logout button</string>
    <string name="content_desc_banner_belajar_aksara">Banner belajar aksara</string>
    <string name="cek_kamus_mini">Cek kamus mini disini!</string>
    <string name="content_desc_logo_buku_belajar">Logo buku</string>
    <string name="content_desc_banner_kamus">Banner kamus</string>
    <string name="lihat_kamus_kecil">Lihat Kamus Kecil</string>
    <string name="silahkan_isi_data_anda">Silahkan isi data Anda</string>
    <string name="masukkan_nama">Masukkan nama Anda...</string>
    <string name="content_desc_signboard_salah">Signboard salah</string>
    <string name="popup_aksara_salah">Tulisan aksara Anda belum benar, silahkan coba lagi</string>
    <string name="coba_lagi">Coba lagi</string>
    <string name="pop_aksara_benar">Selamat! Anda berhasil menulis aksara %1$s dengan benar!</string>
    <string name="content_desc_signboard_benar">Signboard benar</string>
    <string name="kembali">Kembali</string>
    <string name="content_desc_bahasa_image">Banner representasi budaya bahasa</string>
    <string name="pilih_bahasa_kamus">Pilih Bahasa Kamus</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="content_desc_onboarding_image_1">Onboarding image 1</string>
    <string name="onboarding_content_1">Hai! Selamat datang di NusaL!</string>
    <string name="content_desc_onboarding_image_2">Onboarding image 2</string>
    <string name="onboarding_content_2">NusaL adalah aplikasi untuk belajar aksara lokal Indonesia, seperti bahasa Jawa dan Sunda</string>
    <string name="content_desc_onboarding_image_3">Onboarding image 3</string>
    <string name="onboarding_content_3">Kamu akan belajar menulis aksara dengan bantuan pengecekan machine learning secara otomatis</string>
    <string name="content_desc_onboarding_image_4">Onboarding image 4</string>
    <string name="onboarding_content_4">Tunggu apa lagi, mari bergabung bersama NusaL!</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="masukkan_kata_sandi_baru">Masukkan kata sandi baru...</string>
    <string name="ulangi_kata_sandi_baru">Ulangi kata sandi baru...</string>
    <string name="reset_kata_sandi">Reset Kata Sandi</string>
    <string-array name="language_choice">
        <item>Jawa</item>
        <item>Sunda</item>
    </string-array>
    <string-array name="language_image">
        <item>https://storage.googleapis.com/nusal_resource/banner/bannerJawa.png</item>
        <item>https://storage.googleapis.com/nusal_resource/banner/bannerSunda.png</item>
    </string-array>
    <string-array name="belajar_aksara_jawa_title">
        <item>ba</item>
        <item>ca</item>
        <item>da</item>
        <item>dha</item>
        <item>ga</item>
        <item>ha</item>
        <item>ja</item>
        <item>ka</item>
        <item>la</item>
        <item>ma</item>
        <item>na</item>
        <item>nga</item>
        <item>nya</item>
        <item>pa</item>
        <item>ra</item>
        <item>sa</item>
        <item>ta</item>
        <item>tha</item>
        <item>wa</item>
        <item>ya</item>
    </string-array>
    <string-array name="belajar_aksara_jawa_image">
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/ba.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/ca.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/da.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/dha.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/ga.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/ha.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/ja.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/ka.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/la.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/ma.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/na.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/nga.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/nya.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/pa.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/ra.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/sa.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/ta.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/tha.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/wa.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Jawa/ya.png</item>
    </string-array>
    <string-array name="belajar_aksara_sunda_title">
        <item>ba</item>
        <item>ca</item>
        <item>da</item>
        <item>ga</item>
        <item>ha</item>
        <item>ja</item>
        <item>ka</item>
        <item>la</item>
        <item>ma</item>
        <item>na</item>
        <item>nga</item>
        <item>nya</item>
        <item>pa</item>
        <item>ra</item>
        <item>sa</item>
        <item>ta</item>
        <item>wa</item>
        <item>ya</item>
    </string-array>
    <string-array name="belajar_aksara_sunda_image">
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/ba.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/ca.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/da.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/ga.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/ha.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/ja.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/ka.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/la.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/ma.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/na.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/nga.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/nya.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/pa.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/ra.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/sa.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/ta.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/wa.png</item>
        <item>https://storage.googleapis.com/nusal_resource/Aksara%20Image/Aksara%20Sunda/ya.png</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cek_email_anda_untuk_memverifikasi">Cek email Anda untuk memverifikasi</string>
    <string name="content_desc_image_email_verif">Image Email Verif</string>
    <string name="ganti_kata_sandi">Ganti kata sandi</string>
    <string name="content_desc_image_banner_kamus">Image banner kamus</string>
    <string name="logo_back">Logo back</string>
    <string name="content_desc_kamus_image">Kamus image</string>
    <string name="sudah_mempunyai_akun_login_disini">Sudah mempunyai Akun? <b>Login Disini!</b></string>
    <string-array name="kamus_jawa_title">
        <item>Pisang / Gedhang</item>
        <item>Tanah / Lemah</item>
        <item>Laki-laki / Lanang</item>
        <item>Perempuan / Wadon</item>
        <item>Apa kabar / Piye kabare</item>
        <item>Makan / Mangan</item>
        <item>Minum / Ngombe</item>
        <item>Ayam / Pitik</item>
        <item>Kelinci / Terwelu</item>
        <item>Pensil / Potlot</item>
    </string-array>
</resources>