<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_onboarding_scene"
    tools:context=".ui.OnboardingActivity">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:src="@drawable/onboarding_image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_desc_onboarding_image_1" />

    <TextView
        android:id="@+id/tv_page1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/onboarding_content_1"
        android:textColor="@color/black_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image1"
        app:layout_constraintStart_toStartOf="@id/image1"
        app:layout_constraintTop_toBottomOf="@id/image1" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/onboarding_image2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_desc_onboarding_image_2" />

    <TextView
        android:id="@+id/tv_page2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_content_2"
        android:textColor="@color/black_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image2"
        app:layout_constraintStart_toStartOf="@id/image2"
        app:layout_constraintTop_toBottomOf="@id/image2"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/image3"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:src="@drawable/onboarding_image3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_desc_onboarding_image_3" />

    <TextView
        android:id="@+id/tv_page3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_content_3"
        android:textColor="@color/black_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image3"
        app:layout_constraintStart_toStartOf="@id/image3"
        app:layout_constraintTop_toBottomOf="@id/image3"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/image4"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:src="@drawable/nusal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_desc_onboarding_image_4" />

    <TextView
        android:id="@+id/tv_page4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/onboarding_content_4"
        android:textColor="@color/black_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image4"
        app:layout_constraintStart_toStartOf="@id/image4"
        app:layout_constraintTop_toBottomOf="@id/image4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/daftar_sekarang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_page4" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        app:altSrc="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_outline_circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        app:altSrc="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu3"
        app:layout_constraintStart_toEndOf="@id/menu1"
        app:srcCompat="@drawable/ic_outline_circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        app:altSrc="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu4"
        app:layout_constraintStart_toEndOf="@id/menu2"
        app:srcCompat="@drawable/ic_outline_circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu4"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        app:altSrc="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu3"
        app:srcCompat="@drawable/ic_outline_circle_24" />

</androidx.constraintlayout.motion.widget.MotionLayout>