<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SuccessResetPasswordFragment"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_check_email"
            android:layout_width="wrap_content"
            android:layout_height="360dp"
            android:src="@drawable/check_your_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_desc_image_email_verif" />

        <TextView
            android:id="@+id/tv_check_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/cek_email_anda_untuk_memverifikasi"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/img_check_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back_to_login"
            app:layout_constraintTop_toBottomOf="@id/tv_check_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/kembali"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_width="200dp"
            android:layout_height="60dp"
            app:cornerRadius="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>