<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/frame_container_forgot_password">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ForgotPasswordActivity"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_forgot_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.capstone.nusal.customview.CustomEmailEditText
                android:id="@+id/edt_forgot_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/masukkan_email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_forgot_email"
            android:layout_marginTop="20dp"
            android:id="@+id/til_forgot_password_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.capstone.nusal.customview.CustomPasswordEditText
                android:id="@+id/edt_forgot_password_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/masukkan_kata_sandi_baru"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_forgot_password_1"
            android:layout_marginTop="20dp"
            android:id="@+id/til_forgot_password_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.capstone.nusal.customview.CustomPasswordEditText
                android:id="@+id/edt_forgot_password_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/ulangi_kata_sandi_baru"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cornerRadius="10dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/til_forgot_password_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/reset_kata_sandi"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
