<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.learn.LearnLanguageAksaraActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_meaning"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#EFEAD8"
        app:strokeColor="@color/black_200"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_learn_aksara"
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/content_desc_aksara_image" />

            <TextView
                android:id="@+id/tv_learn_aksara_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_learn_aksara"
                tools:text="ba" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/frame_draw_view"
        app:layout_constraintTop_toBottomOf="@id/card_meaning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="320dp"
            app:cardBackgroundColor="@color/black_200"
            app:cardCornerRadius="10dp"/>

        <com.divyanshu.draw.widget.DrawView
            android:id="@+id/draw_view"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:translationZ="4dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_meaning"
            android:layout_gravity="center"/>

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear_canvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hapus_kanvas"
        app:layout_constraintEnd_toStartOf="@+id/btn_check_aksara"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_draw_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_check_aksara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cek_aksara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_clear_canvas"
        app:layout_constraintTop_toBottomOf="@id/frame_draw_view" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/pb_inference_loading"
        style="@style/SpinKitView.RotatingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:SpinKit_Color="@color/black_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>